[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "smftools"
description = "Single Molecule Footprinting Analysis in Python."
requires-python = ">=3.10,<3.15"
license = { file = "LICENSE" }
authors = [
    {name = "Joseph McKenna"}
]
maintainers = [
    {name = "Joseph McKenna", email = "jkmckenna@berkeley.edu"}
]
keywords = [
  "single-molecule-footprinting",
  "chromatin-accessibility",
  "protein-dna-binding",
  "nanopore",
  "single-locus",
  "anndata",
  "machine-learning"
]
readme = "README.md"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Visualization"
]
dependencies = [
    "anndata>=0.10.0",
    "biopython>=1.79",
    "captum",
    "click",
    "fastcluster",
    "hydra-core",
    "igraph",
    "leidenalg",
    "lightning",
    "multiqc",
    "networkx>=3.2",
    "numpy>=1.22.0,<2",
    "omegaconf",
    "pandas>=1.4.2",
    "pod5>=0.1.21",
    "pyfaidx>=0.8.0",
    "pybedtools>=0.12.0",
    "pyBigWig>=0.3.24",
    "pysam>=0.19.1",
    "scanpy>=1.9",
    "scikit-learn>=1.0.2",
    "scipy>=1.7.3",
    "shap",
    "seaborn>=0.11",
    "torch>=1.9.0",
    "tqdm",
    "upsetplot",
    "wandb"
]
dynamic = ["version"]

[project.urls]
Source = "https://github.com/jkmckenna/smftools"
Documentation = "https://smftools.readthedocs.io/"

[project.scripts]
smftools = "smftools.cli_entry:cli"

[project.optional-dependencies]
tests = [
    "pytest",
    "pytest-cov"
]

dev = ["ruff", "pre-commit"]

docs = [
    "sphinx>=7",
    "sphinx-book-theme>=1.1.0",
    "sphinx-autodoc-typehints>=1.25.2",
    "myst-parser>=2",
    "myst-nb>=1",
    "sphinx-design",
    "readthedocs-sphinx-search",
    "sphinxext-opengraph",
    "sphinx-copybutton",
    "nbsphinx>=0.9",
    "ipython>=7.20",
    "matplotlib!=3.6.1",
    "sphinxcontrib-bibtex",
    "setuptools"
]

[tool.hatch.build]
sources = ["src"]

[tool.hatch.build.targets.wheel]
include = ["smftools"]

[tool.hatch.version]
path = "src/smftools/_version.py"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
    "--strict-markers",
    "--doctest-modules",
    "--pyargs",
]
testpaths = ["tests"]
pythonpath = ["src"]
xfail_strict = true
markers = [
    "smoke: rapid, runtime and import tests",
    "unit: fast, function tests without external dependencies",
    "integration: slower, fucntional tests with external dependencies",
    "e2e: slowest, end-to-end workflow testing"
]

[tool.coverage.run]
source = ["smftools"]
omit = ["tests/*"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]
exclude = [
    "docs/**",
    "**/*archived*/**",
    "**/*.ipynb",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "ISC"]
ignore = ["E501", "F", "B", "UP","SIM"]