[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "smftools"
description = "Single Molecule Footprinting Analysis in Python."
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    {name = "Joseph McKenna"}
]
maintainers = [
    {name = "Joseph McKenna", email = "jkmckenna@berkeley.edu"}
]
keywords = [
  "single-molecule-footprinting",
  "chromatin-accessibility",
  "protein-dna-binding",
  "nanopore",
  "single-locus",
  "anndata",
  "machine-learning"
]
readme = "README.md"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Visualization"
]
dependencies = [
    "anndata>=0.10.0",
    "biopython>=1.79",
    "click",
    "numpy>=1.22.0,<2",
    "pandas>=1.4.2",
    "pyfaidx>=0.8.0",
    "scipy>=1.7.3",
    "seaborn>=0.11",
    "tqdm",
]
dynamic = ["version"]

[project.urls]
Source = "https://github.com/jkmckenna/smftools"
Documentation = "https://smftools.readthedocs.io/"

[project.scripts]
smftools = "smftools.cli_entry:cli"

[project.optional-dependencies]

dev = [
    "ruff", 
    "pre-commit", 
    "pytest", 
    "pytest-cov"]

docs = [
    "sphinx>=7,<8",
    "sphinx-book-theme>=1.1,<2",
    "sphinx-autodoc-typehints>=1.25.2,<4",
    "myst-parser>=2,<3",
    "myst-nb>=1,<2",
    "sphinx-design",
    "readthedocs-sphinx-search",
    "sphinxext-opengraph>=0.9,<0.10",
    "sphinx-copybutton>=0.5,<0.6",
    "sphinx-click>=5,<7",
    "nbsphinx>=0.9",
    "ipython>=7.20",
    "matplotlib!=3.6.1",
    "sphinxcontrib-bibtex>=2,<3",
    "setuptools",
    "pyyaml"
]

cluster = [
    "fastcluster",
    "leidenalg",
]

informatics = [
    "pybedtools>=0.12.0",
    "pyBigWig>=0.3.24",
    "pysam>=0.19.1",
]

misc = [
    "networkx>=3.2",
    "upsetplot",
]

ont = [
    "pod5>=0.1.21",
]

ml = [
    "captum",
    "hydra-core",
    "lightning",
    "omegaconf",
    "scikit-learn>=1.0.2",
    "shap",
    "torch>=1.9.0",
    "wandb",
]

omics = [
    "igraph",
    "scanpy>=1.9",
]

qc = [
    "multiqc",
]

all = [
  # cluster
  "fastcluster",
  "leidenalg",

  # informatics
  "pybedtools>=0.12.0",
  "pyBigWig>=0.3.24",
  "pysam>=0.19.1",

  # misc
  "networkx>=3.2",
  "upsetplot",

  # ont
  "pod5>=0.1.21",

  # ml
  "captum",
  "hydra-core",
  "lightning",
  "omegaconf",
  "scikit-learn>=1.0.2",
  "shap",
  "torch>=1.9.0",
  "wandb",

  # omics
  "igraph",
  "scanpy>=1.9",

  # qc
  "multiqc",
]

[tool.hatch.build]
sources = ["src"]

[tool.hatch.build.targets.wheel]
include = ["smftools"]

[tool.hatch.version]
path = "src/smftools/_version.py"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
    "--strict-markers",
    "--doctest-modules",
    "--pyargs",
]
testpaths = ["tests"]
pythonpath = ["src"]
xfail_strict = true
markers = [
    "smoke: rapid, runtime and import tests",
    "unit: fast, function tests without external dependencies",
    "integration: slower, fucntional tests with external dependencies",
    "e2e: slowest, end-to-end workflow testing"
]

[tool.coverage.run]
source = ["smftools"]
omit = ["tests/*"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]
exclude = [
    "docs/**",
    "**/*archived*/**",
    "**/*.ipynb",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "ISC"]
ignore = ["E501", "F", "B", "UP","SIM"]