[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "smftools"
description = "Single Molecule Footprinting Analysis in Python."
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
    {name = "Joseph McKenna"}
]
maintainers = [
    {name = "Joseph McKenna", email = "jkmckenna@berkeley.edu"}
]
keywords = [
  "single-molecule-footprinting",
  "chromatin-accessibility",
  "protein-dna-binding",
  "nanopore",
  "single-locus",
  "anndata",
  "machine-learning"
]
readme = "README.md"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Visualization"
]
dependencies = [
    "anndata>=0.12,<0.13",
    "biopython>=1.79",
    "click",
    "dask[array]",
    "joblib",
    "matplotlib>=3.6.2",
    "numpy>=1.22.0,<2",
    "pandas>=2.1,<3",
    "psutil>=5.9.0",
    "pyarrow>=15",
    "pysam>=0.19.1",
    "scikit-learn>=1.2",
    "seaborn>=0.11",
    "scipy>=1.7.3",
    "torch>=2.0",
    "tqdm",
    "zarr>=3.1,<4",
]
dynamic = ["version"]

[project.urls]
Source = "https://github.com/jkmckenna/smftools"
Documentation = "https://smftools.readthedocs.io/"

[project.scripts]
smftools = "smftools.cli_entry:cli"

[project.optional-dependencies]

# Compatibility extras for existing development and documentation installs.
# New contributor installs should use the dependency groups below.
dev = [
    "ruff==0.15.0",
    "pre-commit",
    "pytest",
    "pytest-cov",
]

docs = [
    "sphinx>=7,<8",
    "sphinx-book-theme>=1.1,<2",
    "sphinx-autodoc-typehints>=1.25.2,<4",
    "myst-parser>=2,<3",
    "myst-nb>=1,<2",
    "sphinx-design",
    "readthedocs-sphinx-search",
    "sphinxext-opengraph>=0.9,<0.10",
    "sphinx-copybutton>=0.5,<0.6",
    "sphinx-click>=5,<7",
    "nbsphinx>=0.9",
    "ipython>=7.20",
    "matplotlib!=3.6.1",
    "sphinxcontrib-bibtex>=2,<3",
    "setuptools",
    "pyyaml"
]

# Feature profiles.
ont = [
    "pod5>=0.1.21",
]

umi = [
    "edlib",
]

genome-io = [
    "pybedtools>=0.12.0",
    "pyBigWig>=0.3.24",
]

project = [
    "duckdb",
    "xarray",
]

analysis = [
    "igraph",
    "leidenalg",
    "networkx>=3.2",
    "pynndescent>=0.5.10",
    "tensorly",
    "umap-learn>=0.5.5",
    "upsetplot",
    "xgboost>=1.7",
]

ml-extended = [
    "captum",
    "hydra-core",
    "lightning",
    "omegaconf",
    "shap",
    "wandb",
]

qc = [
    "multiqc",
]

# Compatibility aliases for the previous fine-grained extras. Dependencies
# that moved into the default install remain here so existing commands work.
cluster = [
    "igraph",
    "leidenalg",
]

misc = [
    "networkx>=3.2",
    "upsetplot",
]

plotting = [
    "matplotlib>=3.6.2",
    "seaborn>=0.11",
]

pybedtools = [
    "pybedtools>=0.12.0",
]

pybigwig = [
    "pyBigWig>=0.3.24",
]

pysam = [
    "pysam>=0.19.1",
]

ml-base = [
    "scikit-learn>=1.2",
    "tensorly",
    "torch>=2.0",
    "xgboost>=1.7",
]

xgboost = [
    "xgboost>=1.7",
]

umap = [
    "pynndescent>=0.5.10",
    "umap-learn>=0.5.5",
]

torch = [
    "torch>=2.0",
]

lazy = [
    # Lazy partitioned-store reads (anndata.experimental.read_lazy).
    # Optional: materialize() falls back to eager reads without it.
    "xarray",
]

catalog = [
    # Project-level cross-experiment catalog engine.
    # Optional: the project catalog falls back to a pandas/pyarrow union without it.
    "duckdb",
]

all = [
    # project
    "duckdb",
    "xarray",

    # analysis
    "igraph",
    "leidenalg",
    "networkx>=3.2",
    "pynndescent>=0.5.10",
    "tensorly",
    "umap-learn>=0.5.5",
    "upsetplot",
    "xgboost>=1.7",

    # ont
    "pod5>=0.1.21",

    # genome-io
    "pybedtools>=0.12.0",
    "pyBigWig>=0.3.24",

    # ml-extended
    "captum",
    "hydra-core",
    "lightning",
    "omegaconf",
    "shap",
    "wandb",

    # qc
    "multiqc",

    # umi
    "edlib",
]

# Deprecated compatibility alias for `all`.
all_2 = [
    # project
    "duckdb",
    "xarray",

    # analysis
    "igraph",
    "leidenalg",
    "networkx>=3.2",
    "pynndescent>=0.5.10",
    "tensorly",
    "umap-learn>=0.5.5",
    "upsetplot",
    "xgboost>=1.7",

    # ont
    "pod5>=0.1.21",

    # genome-io
    "pybedtools>=0.12.0",
    "pyBigWig>=0.3.24",

    # ml-extended
    "captum",
    "hydra-core",
    "lightning",
    "omegaconf",
    "shap",
    "wandb",

    # qc
    "multiqc",

    # umi
    "edlib",
]

[dependency-groups]
test = [
    "pytest",
    "pytest-cov",
]

lint = [
    "pre-commit",
    "ruff==0.15.0",
]

docs = [
    "sphinx>=7,<8",
    "sphinx-book-theme>=1.1,<2",
    "sphinx-autodoc-typehints>=1.25.2,<4",
    "myst-parser>=2,<3",
    "myst-nb>=1,<2",
    "sphinx-design",
    "readthedocs-sphinx-search",
    "sphinxext-opengraph>=0.9,<0.10",
    "sphinx-copybutton>=0.5,<0.6",
    "sphinx-click>=5,<7",
    "nbsphinx>=0.9",
    "ipython>=7.20",
    "matplotlib!=3.6.1",
    "sphinxcontrib-bibtex>=2,<3",
    "setuptools",
    "pyyaml",
]

dev = [
    {include-group = "test"},
    {include-group = "lint"},
]

[tool.hatch.build]
sources = ["src"]

[tool.hatch.build.targets.wheel]
include = ["smftools"]

[tool.hatch.version]
path = "src/smftools/_version.py"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
    "--strict-markers",
    "--doctest-modules",
    "--pyargs",
]
testpaths = ["tests"]
pythonpath = ["src"]
xfail_strict = true
markers = [
    "smoke: rapid, runtime and import tests",
    "unit: fast, function tests without external dependencies",
    "integration: slower, fucntional tests with external dependencies",
    "e2e: slowest, end-to-end workflow testing"
]

[tool.coverage.run]
source = ["smftools"]
omit = ["tests/*"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]
exclude = [
    "docs/**",
    "**/*archived*/**",
    "**/*.ipynb",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "ISC"]
ignore = ["E501", "F", "B", "UP","SIM"]
